<resources>
    <string name="app_name">Caribbean Covid-19 Meter</string>
    <string name="app_loading_text">Loading...</string>
    <string name="welcome_greeting">Welcome</string>
    <string name="welcome_message">Keep updated with the state of Covid-19 in the
Caribbean.</string>
    <string name="request_name_message">What\'s Your Name?</string>
    <string name="request_name_placeholder">First name is fine</string>
    <string name="theme_selector">Dark Mode</string>

    <string name="default_name">Bonjour</string>
    <string name="defaultDate">Today</string>
    <string name="hello_text">Hello</string>

    <string name="choose_island">Choose Your Island</string>
    <string name="country_default">Country</string>
    <string name="today_default">Today</string>
    <string name="total_default2">Total</string>
    <string name="cases">Cases</string>
    <string name="total_cases_label">Total Cases</string>
    <string name="increase_default">Increase</string>
    <string name="no_rise_default">No rise</string>
    <string name="yesterday_default">Yesterday</string>
    <string name="remind_me">Remind Me</string>
    <string name="date_to_be_announced">COVID-19 Update (To be announced)</string>
    <string name="the_minister_address_time">The minister for health will address the nation at (to be annouced)</string>
    <string name="covid_picture">Covid picture</string>
    <string name="upcoming_text">Upcoming</string>
</resources>
